ADD Sort UPDATE BaseFragment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
 
     <!-- BUTTON -->
     <color name="button_favorite">#F06292</color>
+    <color name="colorWhite">#ffffff</color>
 </resources>
