ADD CREATE EVENT & OTHER

--- a/app/src/main/res/layout/alertdialog_event_and_other.xml
+++ b/app/src/main/res/layout/alertdialog_event_and_other.xml
@@ -47,33 +47,10 @@
                 app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/alertdialog_birthday_edittext_name"
+                    android:id="@+id/alertdialog_event_and_other_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/first_name"
-                    android:inputType="date"
-                    android:maxLength="25"
-                    android:maxLines="1" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textfield_2"
-                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="15dp"
-                android:layout_weight="1"
-                app:boxStrokeColor="@color/colorPrimary"
-                app:errorEnabled="true">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/alertdialog_birthday_edittext_lastname"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/last_name"
+                    android:hint="@string/name"
                     android:maxLength="25"
                     android:maxLines="1" />
 
@@ -108,27 +85,27 @@
         </LinearLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/alertdialog_birthday_boxtext_date"
+            android:id="@+id/alertdialog_event_and_other_boxtest_date"
             style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:clickable="true"
             android:layout_marginEnd="15dp"
+            android:clickable="true"
+            android:focusable="true"
             app:boxStrokeColor="@color/colorPrimaryDark"
-            app:errorEnabled="true"
-            android:focusable="true">
+            app:errorEnabled="true">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/alertdialog_birthday_edittext_date"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:editable="false"
-                    android:hint="@string/enter_the_birth_date"
-                    android:inputType="none"
-                    android:clickable="false"
-                    android:maxLength="10"
-                    android:maxLines="1" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/alertdialog_event_and_other_edittext_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:editable="false"
+                android:hint="@string/enter_the_date"
+                android:inputType="none"
+                android:maxLength="10"
+                android:maxLines="1" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -142,7 +119,7 @@
         android:orientation="horizontal">
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/alertdialog_birthday_button_back"
+            android:id="@+id/alertdialog_event_and_other_button_back"
             style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
@@ -156,7 +133,7 @@
         </com.google.android.material.button.MaterialButton>
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/alertdialog_birthday_button_add"
+            android:id="@+id/alertdialog_event_and_other_button_add"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_marginStart="20dp"
