--- a/app/src/main/res/layout/event_cell.xml
+++ b/app/src/main/res/layout/event_cell.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="150dp"
     android:gravity="center_vertical">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/event_cell_item"
         android:layout_width="match_parent"
-        android:layout_height="110dp"
+        android:layout_height="130dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:background="@color/background_gray"
@@ -20,23 +20,23 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <androidx.cardview.widget.CardView
-                android:layout_width="100dp"
-                android:layout_height="match_parent"
+                android:layout_width="110dp"
+                android:layout_height="110dp"
                 android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginBottom="5dp"
+                android:layout_marginEnd="10dp"
                 app:cardCornerRadius="10dp">
 
                 <ImageView
                     android:id="@+id/event_cell_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:padding="5dp"
+                    android:src="@drawable/im_champagne"
                     android:contentDescription="@null"
-                    android:padding="10dp"
                     android:scaleType="centerCrop" />
 
             </androidx.cardview.widget.CardView>
