--- a/app/src/main/res/layout/birthday_cell.xml
+++ b/app/src/main/res/layout/birthday_cell.xml
@@ -6,13 +6,14 @@
     android:gravity="center_vertical">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/event_cell_item"
+        android:id="@+id/birthday_cell_item"
         android:layout_width="match_parent"
         android:layout_height="130dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:background="@color/background_gray"
         android:clickable="true"
+        android:foreground="?attr/selectableItemBackgroundBorderless"
         android:focusable="true"
         app:cardCornerRadius="10dp"
         app:cardElevation="3dp">
@@ -31,11 +32,11 @@
                 app:cardCornerRadius="10dp">
 
                 <ImageView
-                    android:id="@+id/event_cell_image"
+                    android:id="@+id/birthday_cell_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="5dp"
-                    android:src="@drawable/im_calendar_manager"
+                    android:src="@drawable/im_champagne"
                     android:contentDescription="@null"
                     android:scaleType="centerCrop" />
 
@@ -58,7 +59,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/event_cell_name"
+                        android:id="@+id/birthday_cell_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
@@ -68,7 +69,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/event_cell_date"
+                        android:id="@+id/birthday_cell_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="16sp" />
@@ -87,12 +88,23 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/event_cell_remaining_days"
+                        android:id="@+id/birthday_cell_remaining_days"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:maxLength="4"
                         android:textColor="@color/colorTextBlack"
                         android:textSize="30sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/birthday_cell_age"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:maxLength="15"
+                        android:maxLines="1"
+                        android:textColor="@color/colorTextBlack"
+                        android:textSize="15sp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
