--- a/app/src/main/res/layout/bsd_birthday.xml
+++ b/app/src/main/res/layout/bsd_birthday.xml
@@ -4,12 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:theme="@style/AppBottomSheetDialogTheme">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="30dp">
 
         <LinearLayout
             android:layout_width="50dp"
@@ -31,8 +32,8 @@
 
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:baselineAligned="false">
 
             <com.google.android.material.textfield.TextInputLayout
@@ -43,11 +44,12 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
-                app:boxStrokeColor="@color/colorPrimaryDark"
-                app:errorEnabled="true">
+                android:textColorHint="@color/colorPrimary"
+                app:boxStrokeColor="@color/colorPrimary"
+                app:hintTextColor="@color/colorPrimary">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/alertdialog_birthday_edittext_name"
+                    android:id="@+id/bsd_birthday_edittext_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/first_name"
@@ -65,11 +67,12 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="15dp"
                 android:layout_weight="1"
+                android:textColorHint="@color/colorPrimary"
                 app:boxStrokeColor="@color/colorPrimary"
-                app:errorEnabled="true">
+                app:hintTextColor="@color/colorPrimary">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/alertdialog_birthday_edittext_lastname"
+                    android:id="@+id/bsd_birthday_edittext_lastname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/last_name"
@@ -85,8 +88,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="10dp"
+        android:gravity="center_vertical">
 
         <LinearLayout
             android:layout_width="50dp"
@@ -107,27 +111,29 @@
         </LinearLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/alertdialog_birthday_boxtext_date"
-            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
-            android:layout_width="match_parent"
+            android:id="@+id/bsd_birthday_boxtext_date"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:clickable="true"
+            android:layout_gravity="center"
             android:layout_marginEnd="15dp"
-            app:boxStrokeColor="@color/colorPrimaryDark"
-            app:errorEnabled="true"
-            android:focusable="true">
+            android:clickable="true"
+            android:focusable="true"
+            android:gravity="center"
+            android:textColorHint="@color/colorPrimary"
+            app:boxStrokeColor="@color/colorPrimary"
+            app:hintTextColor="@color/colorPrimary">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/alertdialog_birthday_edittext_date"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:editable="false"
-                    android:hint="@string/enter_the_birth_date"
-                    android:inputType="none"
-                    android:clickable="false"
-                    android:maxLength="10"
-                    android:maxLines="1" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/bsd_birthday_edittext_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:clickable="false"
+                android:editable="false"
+                android:hint="@string/enter_the_birth_date"
+                android:inputType="none"
+                android:maxLength="10"
+                android:maxLines="1" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -136,34 +142,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:gravity="end"
         android:orientation="horizontal">
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/alertdialog_birthday_button_back"
-            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:id="@+id/bsd_birthday_button_add"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
-            android:background="@color/colorPrimary"
-            android:text="@string/back"
-            android:textColor="@color/colorWhite"
-            app:cornerRadius="120dp">
-
-        </com.google.android.material.button.MaterialButton>
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/alertdialog_birthday_button_add"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
             android:background="@color/colorPrimary"
             android:text="@string/add"
             android:textColor="@color/colorWhite"
-            app:cornerRadius="120dp">
+            app:cornerRadius="2dp">
 
         </com.google.android.material.button.MaterialButton>
     </LinearLayout>
