--- a/app/src/main/res/layout/bsd_confirm.xml
+++ b/app/src/main/res/layout/bsd_confirm.xml
@@ -19,11 +19,11 @@
             android:layout_marginStart="30dp"
             android:contentDescription="@null"
             android:scaleType="centerCrop"
-            android:src="@drawable/im_birthday_cake" />
+            android:src="@drawable/tick" />
 
         <Button
-            android:id="@+id/bsd_choice_type_event_button_birthday"
-            android:layout_width="match_parent"
+            android:id="@+id/bsd_confirm_yes"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
@@ -32,42 +32,9 @@
             android:ellipsize="end"
             android:gravity="start"
             android:maxLines="1"
-            android:text="@string/birthday"
+            android:text="@string/confirm"
             android:textAllCaps="false"
-            android:textColor="@color/colorPrimary"
-            android:textSize="20sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="30dp"
-            android:contentDescription="@null"
-            android:scaleType="centerCrop"
-            android:src="@drawable/im_calendar_event" />
-
-        <Button
-            android:id="@+id/bsd_choice_type_event_button_birthday_event"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:background="?android:attr/selectableItemBackground"
-            android:ellipsize="end"
-            android:gravity="start"
-            android:maxLines="1"
-            android:text="@string/bithday_event"
-            android:textAllCaps="false"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorGreen"
             android:textSize="20sp" />
 
     </LinearLayout>
@@ -85,11 +52,11 @@
             android:layout_gravity="center_vertical"
             android:layout_marginStart="30dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/im_champagne" />
+            android:src="@drawable/close" />
 
         <Button
-            android:id="@+id/bsd_choice_type_event_button_other_event"
-            android:layout_width="match_parent"
+            android:id="@+id/bsd_confirm_no"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
@@ -98,9 +65,9 @@
             android:ellipsize="end"
             android:gravity="start"
             android:maxLines="1"
-            android:text="@string/other_event"
+            android:text="@string/cancel"
             android:textAllCaps="false"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorRed"
             android:textSize="20sp" />
 
     </LinearLayout>
