--- a/app/src/main/res/layout/bsd_item_selected.xml
+++ b/app/src/main/res/layout/bsd_item_selected.xml
@@ -19,10 +19,10 @@
             android:layout_marginStart="30dp"
             android:contentDescription="@null"
             android:scaleType="centerCrop"
-            android:src="@drawable/im_birthday_cake" />
+            android:src="@drawable/pencil" />
 
         <Button
-            android:id="@+id/bsd_choice_type_event_button_birthday"
+            android:id="@+id/bsd_item_selected_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -32,40 +32,7 @@
             android:ellipsize="end"
             android:gravity="start"
             android:maxLines="1"
-            android:text="@string/birthday"
-            android:textAllCaps="false"
-            android:textColor="@color/colorPrimary"
-            android:textSize="20sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="30dp"
-            android:contentDescription="@null"
-            android:scaleType="centerCrop"
-            android:src="@drawable/im_calendar_event" />
-
-        <Button
-            android:id="@+id/bsd_choice_type_event_button_birthday_event"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:background="?android:attr/selectableItemBackground"
-            android:ellipsize="end"
-            android:gravity="start"
-            android:maxLines="1"
-            android:text="@string/bithday_event"
+            android:text="@string/edit"
             android:textAllCaps="false"
             android:textColor="@color/colorPrimary"
             android:textSize="20sp" />
@@ -85,10 +52,10 @@
             android:layout_gravity="center_vertical"
             android:layout_marginStart="30dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/im_champagne" />
+            android:src="@drawable/trash" />
 
         <Button
-            android:id="@+id/bsd_choice_type_event_button_other_event"
+            android:id="@+id/bsd_item_selected_delete"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -98,9 +65,9 @@
             android:ellipsize="end"
             android:gravity="start"
             android:maxLines="1"
-            android:text="@string/other_event"
+            android:text="@string/delete"
             android:textAllCaps="false"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorRed"
             android:textSize="20sp" />
 
     </LinearLayout>
