--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".controller.event.EventFragment">
+    tools:context=".controller.event.EventBirthdayFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fragment_event_list"
