--- a/app/src/main/res/layout/activity_discussion.xml
+++ b/app/src/main/res/layout/activity_discussion.xml
@@ -8,7 +8,7 @@
     tools:context=".controller.discussion.DiscussionActivity">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_social"
+        android:id="@+id/discussion_activity_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary" />
