--- a/app/src/main/res/layout/disussion_request_cell.xml
+++ b/app/src/main/res/layout/disussion_request_cell.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/discussion_item"
+        android:id="@+id/discussion_request_item"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_marginStart="10dp"
@@ -33,7 +33,7 @@
                 app:cardCornerRadius="10dp">
 
                 <ImageView
-                    android:id="@+id/discussion_image"
+                    android:id="@+id/discussion_request_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:contentDescription="@null"
@@ -47,7 +47,7 @@
                 android:layout_height="match_parent">
 
                 <TextView
-                    android:id="@+id/discussion_text"
+                    android:id="@+id/discussion_request_text"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginStart="10dp"
@@ -57,11 +57,40 @@
                     android:maxLines="2"
                     android:textSize="20sp" />
 
-
             </LinearLayout>
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/discussion_request_join"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:background="@color/colorGreen"
+            android:text="Join"
+            android:textColor="@color/colorWhite" />
+
+        <Button
+            android:id="@+id/discussion_request_deny"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:background="@color/colorRed"
+            android:text="Deny"
+            android:textColor="@color/colorWhite" />
+
+    </LinearLayout>
 
 </LinearLayout>
