ADD Gallery (Gallery, Request, Users)

--- a/app/src/main/res/menu/toolbar_menu_group.xml
+++ b/app/src/main/res/menu/toolbar_menu_group.xml
@@ -10,7 +10,7 @@
 
     <item
         android:id="@+id/toolbar_options"
-        android:icon="@drawable/ic_options"
+        android:icon="@drawable/ic_users"
         android:title="@string/title_options"
         app:showAsAction="ifRoom" />
 
