--- a/app/src/main/res/layout/galleries_cell.xml
+++ b/app/src/main/res/layout/galleries_cell.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/discussion_item"
+        android:id="@+id/galleries_item"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginStart="10dp"
@@ -38,7 +38,7 @@
                     android:contentDescription="@null"
                     android:padding="5dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/chat" />
+                    android:src="@drawable/gallery" />
 
             </androidx.cardview.widget.CardView>
 
@@ -47,15 +47,15 @@
                 android:layout_height="match_parent">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
                     android:id="@+id/linearLayout"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_alignParentStart="true"
                     android:orientation="horizontal">
 
                     <TextView
 
-                        android:id="@+id/discussion_text"
+                        android:id="@+id/galleries_text"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginStart="10dp"
@@ -69,12 +69,12 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/discussion_date"
+                    android:id="@+id/galleries_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="6dp"
-                    android:layout_alignParentEnd="true"
                     android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="6dp"
                     android:layout_marginEnd="10dp"
                     android:ellipsize="end"
                     android:gravity="center_vertical"
