--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,13 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_event"
-        android:icon="@drawable/ic_birthday_cake"
-        android:title="@string/title_birthday" />
+        android:id="@+id/navigation_galleries"
+        android:icon="@drawable/ic_image"
+        android:title="@string/title_galleries" />
 
     <item
-        android:id="@+id/navigation_social"
-        android:icon="@drawable/ic_users"
-        android:title="@string/title_social" />
+        android:id="@+id/navigation_discussions"
+        android:icon="@drawable/ic_chat"
+        android:title="@string/title_discussions" />
+
+    <item
+        android:id="@+id/navigation_birthday"
+        android:icon="@drawable/ic_birthday_cake"
+        android:title="@string/title_birthday" />
 
 </menu>
