--- a/app/src/main/res/layout/message_activity.xml
+++ b/app/src/main/res/layout/message_activity.xml
@@ -41,39 +41,48 @@
     <LinearLayout
         android:id="@+id/activity_message_chat_add_message_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:layout_margin="@dimen/default_margin"
-        android:gravity="center_vertical">
+        android:gravity="center_horizontal">
 
         <!-- ADD FILE BUTTON -->
         <ImageButton
             android:id="@+id/activity_message_chat_add_file_button"
             style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:adjustViewBounds="true"
             android:gravity="center"
-            android:src="@drawable/ic_add_circle_black_24px" />
+            android:scaleType="centerCrop"
+            android:src="@drawable/im_add" />
 
-        <!-- TEXT MESSAGE EDIT TEXT -->
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/activity_message_chat_message_edit_text"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/name_text_input"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
             android:layout_weight="1"
-            android:hint="Input text"
-            android:imeOptions="actionDone"
-            android:inputType="textMultiLine"
-            android:textSize="@dimen/default_text_size" />
+            android:layout_height="wrap_content"
+            >
 
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/activity_message_chat_message_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:imeOptions="actionDone"
+                android:inputType="textMultiLine"
+                android:textSize="@dimen/default_text_size"
+                android:hint="Input Text" />
+        </com.google.android.material.textfield.TextInputLayout>
         <!-- ADD MESSAGE BUTTON -->
         <Button
             android:id="@+id/activity_message_chat_send_button"
             style="@style/Widget.AppCompat.Button.Borderless.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/button_round_send"
             android:text="SEND" />
 
     </LinearLayout>
