--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="colorTextBlack">#8a000000</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#9a000000</color>
+    <color name="colorWhiteLightGrey">#F0F0F0</color>
 </resources>
