--- a/app/src/main/res/layout/activity_gallery_request.xml
+++ b/app/src/main/res/layout/activity_gallery_request.xml
@@ -6,11 +6,18 @@
     android:orientation="vertical"
     tools:context=".controller.gallery.request.GalleryRequestActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/gallery_request_activity_toolbar"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary" />
+        android:layout_height="wrap_content"
+        android:theme="@style/Anniversaire.AppBarOverlay">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/gallery_request_activity_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary" />
+    </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/gallery_request_activity_recyclerview"
