--- a/app/src/main/res/layout/bsd_choice_sort.xml
+++ b/app/src/main/res/layout/bsd_choice_sort.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="10dp"
-    android:theme="@style/AppBottomSheetDialogTheme">
+    android:padding="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
