--- a/app/src/main/res/layout/disussion_request_cell.xml
+++ b/app/src/main/res/layout/disussion_request_cell.xml
@@ -2,14 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="150dp"
     android:gravity="center_vertical"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/discussion_request_item"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="120dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:background="@color/background_gray"
@@ -26,9 +26,9 @@
             android:orientation="horizontal">
 
             <androidx.cardview.widget.CardView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_marginStart="5dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginEnd="10dp"
                 app:cardCornerRadius="10dp">
 
@@ -42,55 +42,55 @@
 
             </androidx.cardview.widget.CardView>
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:gravity="center_vertical">
 
                 <TextView
                     android:id="@+id/discussion_request_text"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_toStartOf="@+id/linearLayout"
                     android:ellipsize="end"
                     android:gravity="center_vertical"
                     android:maxLines="2"
+                    android:text="La familles des bois heureux voila c'est tout"
                     android:textSize="20sp" />
 
-            </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/linearLayout"
+                    android:layout_alignParentEnd="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageButton
+                        android:id="@+id/discussion_request_deny"
+                        style="?android:attr/buttonBarButtonStyle"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginStart="10dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/cross" />
+
+                    <ImageButton
+                        android:id="@+id/discussion_request_join"
+                        style="?android:attr/buttonBarButtonStyle"
+                        android:layout_width="50dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_height="50dp"
+                        android:layout_marginStart="10dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/check" />
+
+                </LinearLayout>
+            </RelativeLayout>
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="10dp"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/discussion_request_join"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:background="@color/colorGreen"
-            android:text="Join"
-            android:textColor="@color/colorWhite" />
-
-        <Button
-            android:id="@+id/discussion_request_deny"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:background="@color/colorRed"
-            android:text="Deny"
-            android:textColor="@color/colorWhite" />
-
-    </LinearLayout>
 
 </LinearLayout>
