--- a/app/src/main/res/layout/message_activity.xml
+++ b/app/src/main/res/layout/message_activity.xml
@@ -6,19 +6,26 @@
     android:orientation="vertical"
     tools:context=".controller.messages.MessageActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/message_activity_toolbar"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_alignParentTop="true"
-        android:background="?attr/colorPrimary" />
+        android:layout_height="wrap_content"
+        android:theme="@style/Anniversaire.AppBarOverlay">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/message_activity_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_alignParentTop="true"
+            android:background="?attr/colorPrimary" />
+    </com.google.android.material.appbar.AppBarLayout>
 
     <LinearLayout
         android:id="@+id/activity_message_chat_recycler_view_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/activity_message_chat_add_message_container"
-        android:layout_below="@id/message_activity_toolbar"
+        android:layout_below="@id/appbar"
         android:orientation="vertical">
 
         <!-- RECYCLER VIEW -->
@@ -61,20 +68,19 @@
             android:id="@+id/name_text_input"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
-            android:layout_marginEnd="10dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            >
+            android:layout_marginEnd="10dp"
+            android:layout_weight="1">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/activity_message_chat_message_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:hint="Input Text"
                 android:imeOptions="actionDone"
                 android:inputType="textMultiLine"
-                android:textSize="@dimen/default_text_size"
-                android:hint="Input Text" />
+                android:textSize="@dimen/default_text_size" />
         </com.google.android.material.textfield.TextInputLayout>
         <!-- ADD MESSAGE BUTTON -->
         <Button
