--- a/app/src/main/res/layout/user_cell.xml
+++ b/app/src/main/res/layout/user_cell.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="110dp"
     android:gravity="center_vertical"
     android:orientation="vertical">
 
@@ -27,10 +27,10 @@
 
             <ImageView
                 android:id="@+id/discussion_user_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="@null"
-                android:padding="5dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="10dp"
                 android:scaleType="centerCrop" />
 
             <LinearLayout
